# nhs-notify-web-template-management

./: .editorconfig  .env.template  .eslintignore  .eslintrc.json  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .prettierrc.json  .tool-versions  .trivyignore  AGENTS.md  Dockerfile  Makefile  README.md  VERSION  agents.md  amplify.yaml  amplify.yml  amplify_outputs.json  authoring-letter-example.json  event-subscriber.ts  jest.config.ts  letter-prepared.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.code-workspace  run-e2e.sh  tsconfig.json  zzamplify_outputs.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
amplify/: amplify.yml  backend.ts  jest.config.ts  package-lock.json  package.json  tsconfig.json
api/: spec.json
frontend/: .env.template  .eslintignore  (+10 more)
tests/performance-test/: EmailTemplateCreationJourney.py  NHSAppTemplateCreationJourney.py  README.md  SMSTemplateCreationJourney.py  basic_poc.py  create_nhsapp_template.py  pyproject.toml  report_.html  results_exceptions.csv  results_failures.csv  results_stats.csv  results_stats_history.csv  run.sh  runlocustplaywright.py  shared.py  test_playwrightpoc_async.py  test_playwrightpoc_async_tasks.py
tests/performance-test/helpers/: functions.py  results_pass_fail.py
tests/performance-test/pages/: chooseTemplate.py  createTemplate.py  populateTemplate.py  previewTemplate.py  submitTemplate.py  templateConfirmation.py
tests/performance-test/tests/: EmailTemplateCreationJourney.py  NHSAppTemplateCreationJourney.py  SMSTemplateCreationJourney.py
(+3324 files in other folders)
