[tool.poetry]
name = "performance-test"
version = "0.1.0"
description = "locust performance test for WebUI"
authors = ["NHS"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
locust = "^2.20.1"
locust_plugins = "^4.5.3"
playwright = "^1.48"
pytest-playwright = "^0.5"
nest_asyncio = "^1.6.0"
polars = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
